jive/auto/jive.output
Terminals unused in grammar

   STRING
   VOID
   INT
   BOOL
   CLASS
   PUBLIC
   STATIC
   EXTENDS
   MAIN
   FOR
   RETURN
   NIL
   LBRACKET
   RBRACKET
   EQUEQU
   COMMA
   DOT
   AMPERSAND
   ERROR


State 12 conflicts: 4 shift/reduce
State 26 conflicts: 9 shift/reduce
State 42 conflicts: 1 shift/reduce
State 43 conflicts: 1 shift/reduce
State 44 conflicts: 1 shift/reduce
State 45 conflicts: 1 shift/reduce
State 46 conflicts: 9 shift/reduce
State 47 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce
State 49 conflicts: 1 shift/reduce
State 50 conflicts: 1 shift/reduce
State 55 conflicts: 4 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Statement

    2 Statement: Statement Statement
    3          | IF LPAREN Expression RPAREN Statement ELSE Statement
    4          | WHILE LPAREN Expression RPAREN LBRACE Statement RBRACE
    5          | PRINT LPAREN Identifier RPAREN SEMI
    6          | Identifier EQU Expression SEMI

    7 Expression: Expression AND Expression
    8           | Expression OR Expression
    9           | Expression LESS Expression
   10           | Expression GREATER Expression
   11           | Expression ADD Expression
   12           | Expression SUB Expression
   13           | Expression MUL Expression
   14           | Expression DIV Expression
   15           | Expression MOD Expression
   16           | NUM
   17           | TRUE
   18           | FALSE
   19           | THIS
   20           | Identifier
   21           | NOT Expression
   22           | LPAREN Expression RPAREN

   23 Identifier: ID


Terminals, with rules where they appear

$end (0) 0
error (256)
NUM (258) 16
ID (259) 23
STRING (260)
VOID (261)
INT (262)
BOOL (263)
CLASS (264)
PUBLIC (265)
STATIC (266)
EXTENDS (267)
THIS (268) 19
MAIN (269)
IF (270) 3
ELSE (271) 3
WHILE (272) 4
FOR (273)
RETURN (274)
NIL (275)
LPAREN (276) 3 4 5 22
RPAREN (277) 3 4 5 22
LBRACE (278) 4
RBRACE (279) 4
LBRACKET (280)
RBRACKET (281)
EQU (282) 6
EQUEQU (283)
ADD (284) 11
SUB (285) 12
MUL (286) 13
DIV (287) 14
MOD (288) 15
LESS (289) 9
GREATER (290) 10
TRUE (291) 17
FALSE (292) 18
AND (293) 7
OR (294) 8
NOT (295) 21
COMMA (296)
DOT (297)
SEMI (298) 5 6
AMPERSAND (299)
PRINT (300) 5
ERROR (301)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
Program (48)
    on left: 1, on right: 0
Statement (49)
    on left: 2 3 4 5 6, on right: 1 2 3 4
Expression (50)
    on left: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22, on right:
    3 4 6 7 8 9 10 11 12 13 14 15 21 22
Identifier (51)
    on left: 23, on right: 5 6 20


State 0

    0 $accept: . Program $end

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3
    PRINT  shift, and go to state 4

    Program     go to state 5
    Statement   go to state 6
    Identifier  go to state 7


State 1

   23 Identifier: ID .

    $default  reduce using rule 23 (Identifier)


State 2

    3 Statement: IF . LPAREN Expression RPAREN Statement ELSE Statement

    LPAREN  shift, and go to state 8


State 3

    4 Statement: WHILE . LPAREN Expression RPAREN LBRACE Statement RBRACE

    LPAREN  shift, and go to state 9


State 4

    5 Statement: PRINT . LPAREN Identifier RPAREN SEMI

    LPAREN  shift, and go to state 10


State 5

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 6

    1 Program: Statement .
    2 Statement: Statement . Statement

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3
    PRINT  shift, and go to state 4

    $default  reduce using rule 1 (Program)

    Statement   go to state 12
    Identifier  go to state 7


State 7

    6 Statement: Identifier . EQU Expression SEMI

    EQU  shift, and go to state 13


State 8

    3 Statement: IF LPAREN . Expression RPAREN Statement ELSE Statement

    NUM     shift, and go to state 14
    ID      shift, and go to state 1
    THIS    shift, and go to state 15
    LPAREN  shift, and go to state 16
    TRUE    shift, and go to state 17
    FALSE   shift, and go to state 18
    NOT     shift, and go to state 19

    Expression  go to state 20
    Identifier  go to state 21


State 9

    4 Statement: WHILE LPAREN . Expression RPAREN LBRACE Statement RBRACE

    NUM     shift, and go to state 14
    ID      shift, and go to state 1
    THIS    shift, and go to state 15
    LPAREN  shift, and go to state 16
    TRUE    shift, and go to state 17
    FALSE   shift, and go to state 18
    NOT     shift, and go to state 19

    Expression  go to state 22
    Identifier  go to state 21


State 10

    5 Statement: PRINT LPAREN . Identifier RPAREN SEMI

    ID  shift, and go to state 1

    Identifier  go to state 23


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 Statement: Statement . Statement
    2          | Statement Statement .

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3
    PRINT  shift, and go to state 4

    ID        [reduce using rule 2 (Statement)]
    IF        [reduce using rule 2 (Statement)]
    WHILE     [reduce using rule 2 (Statement)]
    PRINT     [reduce using rule 2 (Statement)]
    $default  reduce using rule 2 (Statement)

    Statement   go to state 12
    Identifier  go to state 7


State 13

    6 Statement: Identifier EQU . Expression SEMI

    NUM     shift, and go to state 14
    ID      shift, and go to state 1
    THIS    shift, and go to state 15
    LPAREN  shift, and go to state 16
    TRUE    shift, and go to state 17
    FALSE   shift, and go to state 18
    NOT     shift, and go to state 19

    Expression  go to state 24
    Identifier  go to state 21


State 14

   16 Expression: NUM .

    $default  reduce using rule 16 (Expression)


State 15

   19 Expression: THIS .

    $default  reduce using rule 19 (Expression)


State 16

   22 Expression: LPAREN . Expression RPAREN

    NUM     shift, and go to state 14
    ID      shift, and go to state 1
    THIS    shift, and go to state 15
    LPAREN  shift, and go to state 16
    TRUE    shift, and go to state 17
    FALSE   shift, and go to state 18
    NOT     shift, and go to state 19

    Expression  go to state 25
    Identifier  go to state 21


State 17

   17 Expression: TRUE .

    $default  reduce using rule 17 (Expression)


State 18

   18 Expression: FALSE .

    $default  reduce using rule 18 (Expression)


State 19

   21 Expression: NOT . Expression

    NUM     shift, and go to state 14
    ID      shift, and go to state 1
    THIS    shift, and go to state 15
    LPAREN  shift, and go to state 16
    TRUE    shift, and go to state 17
    FALSE   shift, and go to state 18
    NOT     shift, and go to state 19

    Expression  go to state 26
    Identifier  go to state 21


State 20

    3 Statement: IF LPAREN Expression . RPAREN Statement ELSE Statement
    7 Expression: Expression . AND Expression
    8           | Expression . OR Expression
    9           | Expression . LESS Expression
   10           | Expression . GREATER Expression
   11           | Expression . ADD Expression
   12           | Expression . SUB Expression
   13           | Expression . MUL Expression
   14           | Expression . DIV Expression
   15           | Expression . MOD Expression

    RPAREN   shift, and go to state 27
    ADD      shift, and go to state 28
    SUB      shift, and go to state 29
    MUL      shift, and go to state 30
    DIV      shift, and go to state 31
    MOD      shift, and go to state 32
    LESS     shift, and go to state 33
    GREATER  shift, and go to state 34
    AND      shift, and go to state 35
    OR       shift, and go to state 36


State 21

   20 Expression: Identifier .

    $default  reduce using rule 20 (Expression)


State 22

    4 Statement: WHILE LPAREN Expression . RPAREN LBRACE Statement RBRACE
    7 Expression: Expression . AND Expression
    8           | Expression . OR Expression
    9           | Expression . LESS Expression
   10           | Expression . GREATER Expression
   11           | Expression . ADD Expression
   12           | Expression . SUB Expression
   13           | Expression . MUL Expression
   14           | Expression . DIV Expression
   15           | Expression . MOD Expression

    RPAREN   shift, and go to state 37
    ADD      shift, and go to state 28
    SUB      shift, and go to state 29
    MUL      shift, and go to state 30
    DIV      shift, and go to state 31
    MOD      shift, and go to state 32
    LESS     shift, and go to state 33
    GREATER  shift, and go to state 34
    AND      shift, and go to state 35
    OR       shift, and go to state 36


State 23

    5 Statement: PRINT LPAREN Identifier . RPAREN SEMI

    RPAREN  shift, and go to state 38


State 24

    6 Statement: Identifier EQU Expression . SEMI
    7 Expression: Expression . AND Expression
    8           | Expression . OR Expression
    9           | Expression . LESS Expression
   10           | Expression . GREATER Expression
   11           | Expression . ADD Expression
   12           | Expression . SUB Expression
   13           | Expression . MUL Expression
   14           | Expression . DIV Expression
   15           | Expression . MOD Expression

    ADD      shift, and go to state 28
    SUB      shift, and go to state 29
    MUL      shift, and go to state 30
    DIV      shift, and go to state 31
    MOD      shift, and go to state 32
    LESS     shift, and go to state 33
    GREATER  shift, and go to state 34
    AND      shift, and go to state 35
    OR       shift, and go to state 36
    SEMI     shift, and go to state 39


State 25

    7 Expression: Expression . AND Expression
    8           | Expression . OR Expression
    9           | Expression . LESS Expression
   10           | Expression . GREATER Expression
   11           | Expression . ADD Expression
   12           | Expression . SUB Expression
   13           | Expression . MUL Expression
   14           | Expression . DIV Expression
   15           | Expression . MOD Expression
   22           | LPAREN Expression . RPAREN

    RPAREN   shift, and go to state 40
    ADD      shift, and go to state 28
    SUB      shift, and go to state 29
    MUL      shift, and go to state 30
    DIV      shift, and go to state 31
    MOD      shift, and go to state 32
    LESS     shift, and go to state 33
    GREATER  shift, and go to state 34
    AND      shift, and go to state 35
    OR       shift, and go to state 36


State 26

    7 Expression: Expression . AND Expression
    8           | Expression . OR Expression
    9           | Expression . LESS Expression
   10           | Expression . GREATER Expression
   11           | Expression . ADD Expression
   12           | Expression . SUB Expression
   13           | Expression . MUL Expression
   14           | Expression . DIV Expression
   15           | Expression . MOD Expression
   21           | NOT Expression .

    ADD      shift, and go to state 28
    SUB      shift, and go to state 29
    MUL      shift, and go to state 30
    DIV      shift, and go to state 31
    MOD      shift, and go to state 32
    LESS     shift, and go to state 33
    GREATER  shift, and go to state 34
    AND      shift, and go to state 35
    OR       shift, and go to state 36

    ADD       [reduce using rule 21 (Expression)]
    SUB       [reduce using rule 21 (Expression)]
    MUL       [reduce using rule 21 (Expression)]
    DIV       [reduce using rule 21 (Expression)]
    MOD       [reduce using rule 21 (Expression)]
    LESS      [reduce using rule 21 (Expression)]
    GREATER   [reduce using rule 21 (Expression)]
    AND       [reduce using rule 21 (Expression)]
    OR        [reduce using rule 21 (Expression)]
    $default  reduce using rule 21 (Expression)


State 27

    3 Statement: IF LPAREN Expression RPAREN . Statement ELSE Statement

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3
    PRINT  shift, and go to state 4

    Statement   go to state 41
    Identifier  go to state 7


State 28

   11 Expression: Expression ADD . Expression

    NUM     shift, and go to state 14
    ID      shift, and go to state 1
    THIS    shift, and go to state 15
    LPAREN  shift, and go to state 16
    TRUE    shift, and go to state 17
    FALSE   shift, and go to state 18
    NOT     shift, and go to state 19

    Expression  go to state 42
    Identifier  go to state 21


State 29

   12 Expression: Expression SUB . Expression

    NUM     shift, and go to state 14
    ID      shift, and go to state 1
    THIS    shift, and go to state 15
    LPAREN  shift, and go to state 16
    TRUE    shift, and go to state 17
    FALSE   shift, and go to state 18
    NOT     shift, and go to state 19

    Expression  go to state 43
    Identifier  go to state 21


State 30

   13 Expression: Expression MUL . Expression

    NUM     shift, and go to state 14
    ID      shift, and go to state 1
    THIS    shift, and go to state 15
    LPAREN  shift, and go to state 16
    TRUE    shift, and go to state 17
    FALSE   shift, and go to state 18
    NOT     shift, and go to state 19

    Expression  go to state 44
    Identifier  go to state 21


State 31

   14 Expression: Expression DIV . Expression

    NUM     shift, and go to state 14
    ID      shift, and go to state 1
    THIS    shift, and go to state 15
    LPAREN  shift, and go to state 16
    TRUE    shift, and go to state 17
    FALSE   shift, and go to state 18
    NOT     shift, and go to state 19

    Expression  go to state 45
    Identifier  go to state 21


State 32

   15 Expression: Expression MOD . Expression

    NUM     shift, and go to state 14
    ID      shift, and go to state 1
    THIS    shift, and go to state 15
    LPAREN  shift, and go to state 16
    TRUE    shift, and go to state 17
    FALSE   shift, and go to state 18
    NOT     shift, and go to state 19

    Expression  go to state 46
    Identifier  go to state 21


State 33

    9 Expression: Expression LESS . Expression

    NUM     shift, and go to state 14
    ID      shift, and go to state 1
    THIS    shift, and go to state 15
    LPAREN  shift, and go to state 16
    TRUE    shift, and go to state 17
    FALSE   shift, and go to state 18
    NOT     shift, and go to state 19

    Expression  go to state 47
    Identifier  go to state 21


State 34

   10 Expression: Expression GREATER . Expression

    NUM     shift, and go to state 14
    ID      shift, and go to state 1
    THIS    shift, and go to state 15
    LPAREN  shift, and go to state 16
    TRUE    shift, and go to state 17
    FALSE   shift, and go to state 18
    NOT     shift, and go to state 19

    Expression  go to state 48
    Identifier  go to state 21


State 35

    7 Expression: Expression AND . Expression

    NUM     shift, and go to state 14
    ID      shift, and go to state 1
    THIS    shift, and go to state 15
    LPAREN  shift, and go to state 16
    TRUE    shift, and go to state 17
    FALSE   shift, and go to state 18
    NOT     shift, and go to state 19

    Expression  go to state 49
    Identifier  go to state 21


State 36

    8 Expression: Expression OR . Expression

    NUM     shift, and go to state 14
    ID      shift, and go to state 1
    THIS    shift, and go to state 15
    LPAREN  shift, and go to state 16
    TRUE    shift, and go to state 17
    FALSE   shift, and go to state 18
    NOT     shift, and go to state 19

    Expression  go to state 50
    Identifier  go to state 21


State 37

    4 Statement: WHILE LPAREN Expression RPAREN . LBRACE Statement RBRACE

    LBRACE  shift, and go to state 51


State 38

    5 Statement: PRINT LPAREN Identifier RPAREN . SEMI

    SEMI  shift, and go to state 52


State 39

    6 Statement: Identifier EQU Expression SEMI .

    $default  reduce using rule 6 (Statement)


State 40

   22 Expression: LPAREN Expression RPAREN .

    $default  reduce using rule 22 (Expression)


State 41

    2 Statement: Statement . Statement
    3          | IF LPAREN Expression RPAREN Statement . ELSE Statement

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    ELSE   shift, and go to state 53
    WHILE  shift, and go to state 3
    PRINT  shift, and go to state 4

    Statement   go to state 12
    Identifier  go to state 7


State 42

    7 Expression: Expression . AND Expression
    8           | Expression . OR Expression
    9           | Expression . LESS Expression
   10           | Expression . GREATER Expression
   11           | Expression . ADD Expression
   11           | Expression ADD Expression .
   12           | Expression . SUB Expression
   13           | Expression . MUL Expression
   14           | Expression . DIV Expression
   15           | Expression . MOD Expression

    MUL  shift, and go to state 30
    DIV  shift, and go to state 31
    MOD  shift, and go to state 32

    MOD       [reduce using rule 11 (Expression)]
    $default  reduce using rule 11 (Expression)


State 43

    7 Expression: Expression . AND Expression
    8           | Expression . OR Expression
    9           | Expression . LESS Expression
   10           | Expression . GREATER Expression
   11           | Expression . ADD Expression
   12           | Expression . SUB Expression
   12           | Expression SUB Expression .
   13           | Expression . MUL Expression
   14           | Expression . DIV Expression
   15           | Expression . MOD Expression

    MUL  shift, and go to state 30
    DIV  shift, and go to state 31
    MOD  shift, and go to state 32

    MOD       [reduce using rule 12 (Expression)]
    $default  reduce using rule 12 (Expression)


State 44

    7 Expression: Expression . AND Expression
    8           | Expression . OR Expression
    9           | Expression . LESS Expression
   10           | Expression . GREATER Expression
   11           | Expression . ADD Expression
   12           | Expression . SUB Expression
   13           | Expression . MUL Expression
   13           | Expression MUL Expression .
   14           | Expression . DIV Expression
   15           | Expression . MOD Expression

    MOD  shift, and go to state 32

    MOD       [reduce using rule 13 (Expression)]
    $default  reduce using rule 13 (Expression)


State 45

    7 Expression: Expression . AND Expression
    8           | Expression . OR Expression
    9           | Expression . LESS Expression
   10           | Expression . GREATER Expression
   11           | Expression . ADD Expression
   12           | Expression . SUB Expression
   13           | Expression . MUL Expression
   14           | Expression . DIV Expression
   14           | Expression DIV Expression .
   15           | Expression . MOD Expression

    MOD  shift, and go to state 32

    MOD       [reduce using rule 14 (Expression)]
    $default  reduce using rule 14 (Expression)


State 46

    7 Expression: Expression . AND Expression
    8           | Expression . OR Expression
    9           | Expression . LESS Expression
   10           | Expression . GREATER Expression
   11           | Expression . ADD Expression
   12           | Expression . SUB Expression
   13           | Expression . MUL Expression
   14           | Expression . DIV Expression
   15           | Expression . MOD Expression
   15           | Expression MOD Expression .

    ADD      shift, and go to state 28
    SUB      shift, and go to state 29
    MUL      shift, and go to state 30
    DIV      shift, and go to state 31
    MOD      shift, and go to state 32
    LESS     shift, and go to state 33
    GREATER  shift, and go to state 34
    AND      shift, and go to state 35
    OR       shift, and go to state 36

    ADD       [reduce using rule 15 (Expression)]
    SUB       [reduce using rule 15 (Expression)]
    MUL       [reduce using rule 15 (Expression)]
    DIV       [reduce using rule 15 (Expression)]
    MOD       [reduce using rule 15 (Expression)]
    LESS      [reduce using rule 15 (Expression)]
    GREATER   [reduce using rule 15 (Expression)]
    AND       [reduce using rule 15 (Expression)]
    OR        [reduce using rule 15 (Expression)]
    $default  reduce using rule 15 (Expression)


State 47

    7 Expression: Expression . AND Expression
    8           | Expression . OR Expression
    9           | Expression . LESS Expression
    9           | Expression LESS Expression .
   10           | Expression . GREATER Expression
   11           | Expression . ADD Expression
   12           | Expression . SUB Expression
   13           | Expression . MUL Expression
   14           | Expression . DIV Expression
   15           | Expression . MOD Expression

    ADD  shift, and go to state 28
    SUB  shift, and go to state 29
    MUL  shift, and go to state 30
    DIV  shift, and go to state 31
    MOD  shift, and go to state 32

    MOD       [reduce using rule 9 (Expression)]
    $default  reduce using rule 9 (Expression)


State 48

    7 Expression: Expression . AND Expression
    8           | Expression . OR Expression
    9           | Expression . LESS Expression
   10           | Expression . GREATER Expression
   10           | Expression GREATER Expression .
   11           | Expression . ADD Expression
   12           | Expression . SUB Expression
   13           | Expression . MUL Expression
   14           | Expression . DIV Expression
   15           | Expression . MOD Expression

    ADD  shift, and go to state 28
    SUB  shift, and go to state 29
    MUL  shift, and go to state 30
    DIV  shift, and go to state 31
    MOD  shift, and go to state 32

    MOD       [reduce using rule 10 (Expression)]
    $default  reduce using rule 10 (Expression)


State 49

    7 Expression: Expression . AND Expression
    7           | Expression AND Expression .
    8           | Expression . OR Expression
    9           | Expression . LESS Expression
   10           | Expression . GREATER Expression
   11           | Expression . ADD Expression
   12           | Expression . SUB Expression
   13           | Expression . MUL Expression
   14           | Expression . DIV Expression
   15           | Expression . MOD Expression

    ADD      shift, and go to state 28
    SUB      shift, and go to state 29
    MUL      shift, and go to state 30
    DIV      shift, and go to state 31
    MOD      shift, and go to state 32
    LESS     shift, and go to state 33
    GREATER  shift, and go to state 34

    MOD       [reduce using rule 7 (Expression)]
    $default  reduce using rule 7 (Expression)


State 50

    7 Expression: Expression . AND Expression
    8           | Expression . OR Expression
    8           | Expression OR Expression .
    9           | Expression . LESS Expression
   10           | Expression . GREATER Expression
   11           | Expression . ADD Expression
   12           | Expression . SUB Expression
   13           | Expression . MUL Expression
   14           | Expression . DIV Expression
   15           | Expression . MOD Expression

    ADD      shift, and go to state 28
    SUB      shift, and go to state 29
    MUL      shift, and go to state 30
    DIV      shift, and go to state 31
    MOD      shift, and go to state 32
    LESS     shift, and go to state 33
    GREATER  shift, and go to state 34

    MOD       [reduce using rule 8 (Expression)]
    $default  reduce using rule 8 (Expression)


State 51

    4 Statement: WHILE LPAREN Expression RPAREN LBRACE . Statement RBRACE

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3
    PRINT  shift, and go to state 4

    Statement   go to state 54
    Identifier  go to state 7


State 52

    5 Statement: PRINT LPAREN Identifier RPAREN SEMI .

    $default  reduce using rule 5 (Statement)


State 53

    3 Statement: IF LPAREN Expression RPAREN Statement ELSE . Statement

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3
    PRINT  shift, and go to state 4

    Statement   go to state 55
    Identifier  go to state 7


State 54

    2 Statement: Statement . Statement
    4          | WHILE LPAREN Expression RPAREN LBRACE Statement . RBRACE

    ID      shift, and go to state 1
    IF      shift, and go to state 2
    WHILE   shift, and go to state 3
    RBRACE  shift, and go to state 56
    PRINT   shift, and go to state 4

    Statement   go to state 12
    Identifier  go to state 7


State 55

    2 Statement: Statement . Statement
    3          | IF LPAREN Expression RPAREN Statement ELSE Statement .

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3
    PRINT  shift, and go to state 4

    ID        [reduce using rule 3 (Statement)]
    IF        [reduce using rule 3 (Statement)]
    WHILE     [reduce using rule 3 (Statement)]
    PRINT     [reduce using rule 3 (Statement)]
    $default  reduce using rule 3 (Statement)

    Statement   go to state 12
    Identifier  go to state 7


State 56

    4 Statement: WHILE LPAREN Expression RPAREN LBRACE Statement RBRACE .

    $default  reduce using rule 4 (Statement)
